--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<a href="https://alex-esc.github.io/" class="btn">Home</a>
 	<a href="https://alex-esc.github.io/pages/about.html" class="btn">About</a>
         <a href="" class="btn">CV</a>
-        <a href="https://alex-esc.github.io/docs/document_index.html" class="btn">Documentos</a>
+        <a href="https://alex-esc.github.io/light/docs/document_index.html
+" class="btn">Documentos</a>
       
     </section>
 
