--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	    
 
 	<a href="https://alex-esc.github.io/light/" class="btn">Home</a>
-	<a href="https://alex-esc.github.io/light/docs/document_index.html" class="btn">About</a>
+	<a href="https://alex-esc.github.io/light/pages/about.html" class="btn">About</a>
         <a href="" class="btn">CV</a>
-        <a href="https://alex-esc.github.io/light/pages/about.html" class="btn">Documentos</a>
+        <a href="https://alex-esc.github.io/light/docs/document_index.html" class="btn">Documentos</a>
       
     </section>
 
