--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>Por ahora puedes ver:</p>
 
 <ul>
-  <li><a href="/docs/document_index.html">Documentos</a></li>
+  <li><a href="https://alex-esc.github.io/light/docs/document_index.html">Documentos</a></li>
   <li><a href="https://c.xkcd.com/random/comic/">Un cómic</a></li>
 </ul>
 
